--- a/index.html
+++ b/index.html
@@ -16,18 +16,9 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <script src="assets/js/prebid.js" defer></script>
-
-    <!-- <script src="assets/js/Prebid.js/build/dist/prebid.js"defer></script> -->
+    <!-- ** CHANGED: Updated the Prebid.js script source ** -->
     <script src="assets/js/main.js" defer></script>
     <title>Viant Inc. Testing Page</title>
-
-    <!-- <script>
-        // Reload the page every 5 seconds
-        setTimeout(function(){
-            location.reload();
-        }, 5000);
-    </script> -->
 </head>
 <body>
     <!--==================== HEADER ====================-->
@@ -60,27 +51,32 @@
                     <div class="portfolio__content grid swiper-slide">
                         <div id="ad-div-300x250" class="ad-container" style="width: 300px; height: 250px;">
                             <h3 class="portfolio__title">300x250 Ad Placement</h3>
+                            <!-- ** CHANGED: Added iframe for ad rendering ** -->
+                            <iframe id="ad-div-300x250-iframe" FRAMEBORDER="0" SCROLLING="no" MARGINHEIGHT="0" MARGINWIDTH="0" TOPMARGIN="0" LEFTMARGIN="0" ALLOWTRANSPARENCY="true" WIDTH="300" HEIGHT="250"></iframe>
                         </div>
                     </div>
-
                     <!--=============== PORTFOLIO 2 (160x600) ===============-->
                     <div class="portfolio__content grid swiper-slide">
                         <div id="ad-div-160x600" class="ad-container" style="width: 160px; height: 600px;">
                             <h3 class="portfolio__title">160x600 Ad Placement</h3>
+                            <!-- ** CHANGED: Added iframe for ad rendering ** -->
+                            <iframe id="ad-div-160x600-iframe" FRAMEBORDER="0" SCROLLING="no" MARGINHEIGHT="0" MARGINWIDTH="0" TOPMARGIN="0" LEFTMARGIN="0" ALLOWTRANSPARENCY="true" WIDTH="160" HEIGHT="600"></iframe>
                         </div>
                     </div>
-
                     <!--=============== PORTFOLIO 3 (728x90) ===============-->
                     <div class="portfolio__content grid swiper-slide">
                         <div id="ad-div-728x90" class="ad-container" style="width: 728px; height: 90px;">
                             <h3 class="portfolio__title">728x90 Ad Placement</h3>
+                            <!-- ** CHANGED: Added iframe for ad rendering ** -->
+                            <iframe id="ad-div-728x90-iframe" FRAMEBORDER="0" SCROLLING="no" MARGINHEIGHT="0" MARGINWIDTH="0" TOPMARGIN="0" LEFTMARGIN="0" ALLOWTRANSPARENCY="true" WIDTH="728" HEIGHT="90"></iframe>
                         </div>
                     </div>
-
                     <!--=============== PORTFOLIO 4 (300x600) ===============-->
                     <div class="portfolio__content grid swiper-slide">
                         <div id="ad-div-300x600" class="ad-container" style="width: 300px; height: 600px;">
                             <h3 class="portfolio__title">300x600 Ad Placement</h3>
+                            <!-- ** CHANGED: Added iframe for ad rendering ** -->
+                            <iframe id="ad-div-300x600-iframe" FRAMEBORDER="0" SCROLLING="no" MARGINHEIGHT="0" MARGINWIDTH="0" TOPMARGIN="0" LEFTMARGIN="0" ALLOWTRANSPARENCY="true" WIDTH="300" HEIGHT="600"></iframe>
                         </div>
                     </div>
                 </div> <!-- Close portfolio__container -->
@@ -95,24 +91,19 @@
                 <div class="swiper-pagination"></div>
             </div>
         </section>
+    </main>
 
-        <!--==================== FOOTER ====================-->
-        <footer class="footer">
-            <p class="footer__copy">&#169; Viant Inc. All right reserved</p>
-        </footer>
+    <!--==================== FOOTER ====================-->
+    <footer class="footer">
+        <p class="footer__copy">&#169; Viant Inc. All right reserved</p>
+    </footer>
 
-        <!--========== SCROLL TOP ==========-->
-        <a href="#" class="scrollup" id="scroll-top">
-            <i class="uil uil-arrow-up scrollup__icon"></i>
-        </a>
+    <!--========== SCROLL TOP ==========-->
+    <a href="#" class="scrollup" id="scroll-top">
+        <i class="uil uil-arrow-up scrollup__icon"></i>
+    </a>
 
-        <!--==================== SWIPER JS ====================-->
-        <script src="assets/js/swiper-bundle.min.js"></script>
-
-        <!-- Prebid.js Script -->
-    
-
-        <!--==================== MAIN JS ====================-->
-    
-    </body>
+    <!--==================== SWIPER JS ====================-->
+    <script src="assets/js/swiper-bundle.min.js"></script>
+</body>
 </html>
