added path to prebid.js

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <!-- ** CHANGED: Updated the Prebid.js script source ** -->
+    <script src="assets/js/prebid.js" defer></script>
     <script src="assets/js/main.js" defer></script>
     <title>Viant Inc. Testing Page</title>
 </head>
